--- a/vs-code.html
+++ b/vs-code.html
@@ -5,7 +5,7 @@
 
     <h2>HTML Forms</h2>
 
-    <form action="/action_page.php">
+    <form action="">
         <label for="fname">primeiro nome:</label><br>
         <input type="text" id="fname" name="fname" value="Laura"><br>
         <label for="lname">sobrenome:</label><br>
